--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!doctype html
+#!doctype html
 <title>
 -프로젝트 모음집-
 
@@ -7,7 +7,7 @@
 
 
 <body>
-KTX 광명 소개 https://lgns1027.github.io/KTX-GWANGMYEONG/
-광명시 소개 https://jhj041027.wixsite.com/my-site
-광명시 쇼핑몰 소개 https://jhj041027.wixsite.com/my-site-1
+  KTX 광명 소개 <a> https://lgns1027.github.io/KTX-GWANGMYEONG/ </a>
+  <br>광명시 소개 <a>https://jhj041027.wixsite.com/my-site</a></br>
+<br>광명시 쇼핑몰 소개<a> https://jhj041027.wixsite.com/my-site-1</a></br>
 </body>
