--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 #!doctype html
-<title>
+<html>
+<head>
+  <title>
 -프로젝트 모음집-
-
-
-</title>
-
-
+  </title>
+</head>
+<style>
+  a {color:blue;}
+  </style>  
 <body>
-  KTX 광명 소개 <a> https://lgns1027.github.io/KTX-GWANGMYEONG/ </a>
+  <br> KTX 광명 소개 <a> https://lgns1027.github.io/KTX-GWANGMYEONG/ </a></br>
   <br>광명시 소개 <a>https://jhj041027.wixsite.com/my-site</a></br>
 <br>광명시 쇼핑몰 소개<a> https://jhj041027.wixsite.com/my-site-1</a></br>
 </body>
+</html>
