--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-#!doctype html
+<!doctype html>
 <html>
 <head>
   <title>
@@ -9,8 +9,8 @@
   a {color:blue;}
   </style>  
 <body>
-  <br> KTX 광명 소개 <a> https://lgns1027.github.io/KTX-GWANGMYEONG/ </a></br>
-  <br>광명시 소개 <a>https://jhj041027.wixsite.com/my-site</a></br>
-<br>광명시 쇼핑몰 소개<a> https://jhj041027.wixsite.com/my-site-1</a></br>
+  <br> <a href"https://lgns1027.github.io/KTX-GWANGMYEONG/">  KTX 광명 소개</a></br>
+  <br> <a href"https://jhj041027.wixsite.com/my-site">광명시 소개</a></br>
+<br><a href"https://jhj041027.wixsite.com/my-site-1">광명시 쇼핑몰 소개</a></br>
 </body>
 </html>
