--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   </title>
 </head>
 <style>
-  a {color:blue;}
+  
   </style>  
-<body>
-  <br> <a href"https://lgns1027.github.io/KTX-GWANGMYEONG/">  KTX 광명 소개</a></br>
-  <br> <a href"https://jhj041027.wixsite.com/my-site">광명시 소개</a></br>
-<br><a href"https://jhj041027.wixsite.com/my-site-1">광명시 쇼핑몰 소개</a></br>
+<body> <a href"https://lgns1027.github.io/KTX-GWANGMYEONG/"> <br>  KTX 광명 소개</br></a>
+   <a href"https://jhj041027.wixsite.com/my-site"> <br>광명시 소개</br></a>
+<a href"https://jhj041027.wixsite.com/my-site-1"> <br>광명시 쇼핑몰 소개</br></a>
 </body>
 </html>
