--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <style>
   
   </style>  
-<body> <a href"https://lgns1027.github.io/KTX-GWANGMYEONG/"> <br>  KTX 광명 소개</br></a>
-   <a href"https://jhj041027.wixsite.com/my-site"> <br>광명시 소개</br></a>
-<a href"https://jhj041027.wixsite.com/my-site-1"> <br>광명시 쇼핑몰 소개</br></a>
+<body> <a href="https://lgns1027.github.io/KTX-GWANGMYEONG/"> <br>  KTX 광명 소개</br></a>
+   <a href="https://jhj041027.wixsite.com/my-site"> <br>광명시 소개</br></a>
+<a href="https://jhj041027.wixsite.com/my-site-1"> <br>광명시 쇼핑몰 소개</br></a>
 </body>
 </html>
