--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   </title>
 </head>
 <style>
-  
+  h2 {color:green}
   </style>  
 <body> <a href="https://lgns1027.github.io/KTX-GWANGMYEONG/"> <br>  KTX 광명 소개</br></a>
    <a href="https://jhj041027.wixsite.com/my-site"> <br>광명시 소개</br></a>
 <a href="https://jhj041027.wixsite.com/my-site-1"> <br>광명시 쇼핑몰 소개</br></a>
+<h2> 
+  <br>jhj041027@naver.com</br>
+<br>jhj041027@gmail.com</br>
 </body>
+
 </html>
