--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <h2> 
   <br>jhj041027@naver.com</br>
 <br>jhj041027@gmail.com</br>
+<h3>nft 판매
+  <a href="https://opensea.io/collection/figure-nft></a>
+           <br>기본적인 디자인 후 코딩을 통한 자동 생산및 자동판매</br>
+</h3>
+          
 </body>
 
 </html>
